# xlapse

./: .bazelrc  .gitignore  .goreleaser.yml  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  codecov.yml  deps.bzl  go.mod  go.sum  http.go  http_test.go  main.go  renovate.json  s3.go  s3_test.go  template.yaml.sample
.github/: dependabot.yml
.github/workflows/: go-mod-tidy-for-dependabot.yaml  release.yaml  test.yaml
cmd/xlapse-image-cleaner/: .gitignore  BUILD.bazel  README.md  go.mod  go.sum  main.go
distributor/: entry.go  entry_test.go  lambda.go  lambda_test.go  main.go  s3.go  s3_test.go  yaml.go
downloader/: http_test.go  main.go
function/distributor/: BUILD.bazel  main.go
function/downloader/: BUILD.bazel  main.go
function/gif-distributor/: BUILD.bazel  main.go
function/gif-maker/: BUILD.bazel  gif_test.go  main.go
gif-distributor/: lambda.go  lambda_test.go  main.go  s3_test.go
gif-maker/: gif.go  gif_test.go  main.go  s3.go  s3_test.go
pkg/service/lambda/: BUILD.bazel  lambda.go  lambda_test.go
pkg/service/s3/: BUILD.bazel  s3.go
pkg/version/: BUILD.bazel
script/release/: release.sh  workspace_status.sh
service/lambda/: BUILD.bazel  lambda.go  lambda_test.go
service/s3/: BUILD.bazel  s3.go  s3_test.go
services/lambda/: lambda.go  lambda_test.go
services/s3/: s3.go  s3_test.go
types/: BUILD.bazel  entry.go  entry_test.go  gif_request.go
types/v1/: BUILD.bazel  entry.pb.go  entry.proto  gif_request.pb.go  gif_request.proto
version/: BUILD.bazel
