load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "distributor_lib",
    srcs = ["main.go"],
    importpath = "github.com/dtan4/xlapse/function/distributor",
    visibility = ["//visibility:private"],
    deps = [
        "//service/lambda",
        "//service/s3",
        "//types",
        "//version",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//:lambda",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_xray_sdk_go//instrumentation/awsv2",
        "@com_github_aws_aws_xray_sdk_go//xray",
        "@com_github_getsentry_sentry_go//:sentry-go",
    ],
)

go_binary(
    name = "distributor",
    embed = [":distributor_lib"],
    visibility = ["//visibility:public"],
)
