load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "downloader_lib",
    srcs = [
        "http.go",
        "main.go",
    ],
    importpath = "github.com/dtan4/xlapse/function/downloader",
    visibility = ["//visibility:private"],
    deps = [
        "//service/s3",
        "//types/v1:types",
        "//version",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_aws_aws_xray_sdk_go//xray:go_default_library",
        "@com_github_getsentry_sentry_go//:go_default_library",
    ],
)

go_binary(
    name = "downloader",
    embed = [":downloader_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "downloader_test",
    srcs = ["http_test.go"],
    embed = [":downloader_lib"],
)
