load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "downloader_lib",
    srcs = [
        "http.go",
        "main.go",
    ],
    importpath = "github.com/dtan4/xlapse/function/downloader",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/service/s3",
        "//pkg/version",
        "//types/v1:types",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_xray_sdk_go//instrumentation/awsv2",
        "@com_github_aws_aws_xray_sdk_go//xray",
        "@com_github_getsentry_sentry_go//:sentry-go",
    ],
)

go_binary(
    name = "downloader",
    embed = [":downloader_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "downloader_test",
    srcs = ["http_test.go"],
    embed = [":downloader_lib"],
)
