load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gif-distributor_lib",
    srcs = ["main.go"],
    importpath = "github.com/dtan4/xlapse/function/gif-distributor",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/service/lambda",
        "//pkg/service/s3",
        "//pkg/version",
        "//types",
        "//types/v1:types",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//:lambda",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_xray_sdk_go_v2//instrumentation/awsv2",
        "@com_github_getsentry_sentry_go//:sentry-go",
    ],
)

go_binary(
    name = "gif-distributor",
    embed = [":gif-distributor_lib"],
    visibility = ["//visibility:public"],
)
