load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gif-maker_lib",
    srcs = [
        "gif.go",
        "main.go",
    ],
    importpath = "github.com/dtan4/xlapse/function/gif-maker",
    visibility = ["//visibility:private"],
    deps = [
        "//service/s3",
        "//types/v1:types",
        "//version",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_aws_aws_xray_sdk_go//xray:go_default_library",
        "@com_github_getsentry_sentry_go//:go_default_library",
    ],
)

go_binary(
    name = "gif-maker",
    embed = [":gif-maker_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gif-maker_test",
    srcs = ["gif_test.go"],
    embed = [":gif-maker_lib"],
)
