load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/dtan4/xlapse/pkg/version",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/dtan4/xlapse/version.Version": "{RELEASE_VERSION}",
        "github.com/dtan4/xlapse/version.Commit": "{RELEASE_COMMIT}",
        "github.com/dtan4/xlapse/version.Date": "{RELEASE_DATE}",
    },
)
