load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lambda",
    srcs = ["lambda.go"],
    importpath = "github.com/dtan4/xlapse/service/lambda",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "//types/v1:types",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//service/lambda",
        "@com_github_aws_aws_sdk_go//service/lambda/lambdaiface",
    ],
)

go_test(
    name = "lambda_test",
    srcs = ["lambda_test.go"],
    embed = [":lambda"],
    deps = [
        "//types",
        "//types/v1:types",
        "@com_github_aws_aws_sdk_go//aws/request",
        "@com_github_aws_aws_sdk_go//service/lambda",
        "@com_github_aws_aws_sdk_go//service/lambda/lambdaiface",
        "@com_github_google_go_cmp//cmp",
    ],
)
