load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "entry.proto",
        "gif_request.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/dtan4/xlapse/types/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "types",
    embed = [":v1_go_proto"],
    importpath = "github.com/dtan4/xlapse/types/v1",
    visibility = ["//visibility:public"],
)
