load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lambda",
    srcs = ["lambda.go"],
    importpath = "github.com/dtan4/xlapse/pkg/service/lambda",
    visibility = ["//visibility:public"],
    deps = [
        "//types/v1:types",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//:lambda",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//types",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_test(
    name = "lambda_test",
    srcs = ["lambda_test.go"],
    embed = [":lambda"],
    deps = [
        "//types/v1:types",
        "@com_github_aws_aws_sdk_go_v2_service_lambda//:lambda",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
