load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "s3",
    srcs = ["s3.go"],
    importpath = "github.com/dtan4/xlapse/pkg/service/s3",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
    ],
)

go_test(
    name = "s3_test",
    srcs = ["s3_test.go"],
    embed = [":s3"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
        "@com_github_google_go_cmp//cmp",
    ],
)
